# amadeus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  catalog.cpp  catalog.h  catalog_table.cpp  catalog_table.h  catalog_tree.cpp  catalog_tree.h  control_bar.cpp  control_bar.h  dirs_tree.cpp  dirs_tree.h  files_table.cpp  files_table.h  line_text_edit.cpp  line_text_edit.h  list_files_table.cpp  list_files_table.h  list_tree.cpp  list_tree.h  main.cpp  mainwindow.cpp  mainwindow.h  play_list.cpp  play_list.h  playlist.cpp  playlist.h  playlist_table.cpp  playlist_table.h  playlist_tree.cpp  playlist_tree.h  playlist_widget.cpp  playlist_widget.h  progress.cpp  progress.h  resources.qrc  shared.h  tool.cpp  (+3 more)
mode;/: playlist.h
model/: playlist.cpp  playlist.h  selection.cpp  selection.h  song.cpp  song.h  songs.cpp  songs.h
shared/: event.hh  event_controller.hh
sqlite/: field.cc  logger.h  query.cc  query.h  result.cc  row.cc  sqlite.cpp  value.cc  value.h
